--- a/projetCV/css/main.css
+++ b/projetCV/css/main.css
@@ -12,13 +12,13 @@
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
-   
+
 }
 
 body {
   width: 100%;
   font-family: "Outfit", sans-serif;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 /*---------------------------------Genral--------------------------- */
@@ -75,25 +75,8 @@ header {
   font-size: 1.5rem;
 }
 
-.images::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 90%;
-  left: 50%;
-  bottom: 0;
-  transform: translateX(-50%);
-  border-radius: 6px;
-  z-index: -1;
-}
-
-.images::before {
-  background: linear-gradient(145deg, #e2e8ec, #ffffff);
-  box-shadow: 5px 5px 15px #d1d9e6, -5px -5px 15px #ffffff;
-}
-
 .images {
-  width: 80%;
+  width: 100%;
   margin-left: auto;
   margin-bottom: 0;
   position: relative;
@@ -244,19 +227,17 @@ i {
   .container {
     padding: 0 1.6rem;
   }
-  .grid-interet{
+  .grid-interet {
     display: grid;
   }
   .grid-liste {
-  padding-top: 15px;
-  margin-left: 45px;
-  text-align: center;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 
-   
-  ;
-  gap: 10px;
-}
+    padding-top: 15px;
+    margin-left: 45px;
+    text-align: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 10px;
+  }
 }
 
 @media screen and (max-width: 600px) {
