--- a/projetCV/css/main.css
+++ b/projetCV/css/main.css
@@ -184,12 +184,12 @@ li {
 }
 .bar {
   position: relative;
-  border: 1px solid #0d96e069;
+  border: 1px solid #696d6e69;
   border-radius: 20px;
 }
 .bar div {
   position: relative;
-  width: 60px;
+  width: 50%;
   height: 3px;
   border-radius: 10px;
   background: var(--gradient);
@@ -267,8 +267,8 @@ i {
   }
   .grid-interet span a {
     opacity: 0;
-  }j
-  .menu {
+  }
+  j .menu {
     display: block;
     font-size: 1.5rem;
     font-weight: bold;
@@ -285,5 +285,38 @@ i {
   }
   .main {
     margin-top: 2rem;
+  }
+}
+@media screen and (max-width: 400px) {
+  header {
+    height: auto;
+  }
+  .grid-interet {
+    padding-top: 0;
+    display: grid;
+    grid-template-rows: 1fr;
+    gap: 5px;
+    font-size: small;
+  }
+  .grid-interet span a {
+    opacity: 0;
+  }
+  j .menu {
+    display: block;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #244d61;
+  }
+
+  #click:checked ~ ul {
+    left: 0%;
+    transition: all 0.3s ease;
+  }
+  .images {
+    width: 100%;
+    margin: auto;
+  }
+  .main {
+    margin-top: 0;
   }
 }
