--- a/projetCV/css/main.css
+++ b/projetCV/css/main.css
@@ -120,10 +120,13 @@ h3 {
 }
 .partie1,
 .partie2 {
+  margin-top: 5px;
   width: 3px;
+  height: 100px;
   border-radius: 15px;
   background: var(--gradient);
 }
+
 .partie1 {
   grid-area: partie-1;
 }
