--- a/projetCV/css/main.css
+++ b/projetCV/css/main.css
@@ -43,6 +43,10 @@ a {
 .ok {
   color: #6606d3;
 }
+.okZ {
+  color: black;
+  font-weight: 600;
+}
 .info span {
   font-weight: 900;
 }
@@ -292,7 +296,6 @@ span img {
   .grid-interet span a {
     opacity: 0;
   }
-
   .images {
     width: 100%;
     margin: auto;
@@ -321,6 +324,7 @@ span img {
   header {
     height: auto;
   }
+
   .sp {
     margin-top: 5px;
     margin-right: 1px;
