--- a/css/main.css
+++ b/css/main.css
@@ -15,38 +15,17 @@ html {
 body {
   margin: 0;
 }
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-main,
-menu,
-nav,
-section {
-  display: block;
-}
-summary {
+
+footer {
   display: list-item;
 }
-audio,
-canvas,
-progress,
-video {
+
+progress
+ {
   display: inline-block;
 }
 progress {
   vertical-align: baseline;
-}
-audio:not([controls]) {
-  display: none;
-  height: 0;
-}
-[hidden],
-template {
-  display: none;
 }
 a {
   background-color: transparent;
@@ -55,51 +34,16 @@ a:active,
 a:hover {
   outline-width: 0;
 }
-abbr[title] {
-  border-bottom: none;
-  text-decoration: underline;
-  text-decoration: underline dotted;
-}
+
 b,
 strong {
   font-weight: bolder;
 }
-dfn {
-  font-style: italic;
-}
-mark {
-  background: #ff0;
-  color: #000;
-}
-small {
-  font-size: 80%;
-}
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-sub {
-  bottom: -0.25em;
-}
-sup {
-  top: -0.5em;
-}
-figure {
-  margin: 1em 40px;
-}
+
 img {
   border-style: none;
 }
-code,
-kbd,
-pre,
-samp {
-  font-family: monospace, monospace;
-  font-size: 1em;
-}
+
 hr {
   box-sizing: content-box;
   height: 0;
@@ -113,22 +57,7 @@ optgroup {
   font: inherit;
   margin: 0;
 }
-optgroup {
-  font-weight: bold;
-}
 
-fieldset {
-  border: 1px solid #c0c0c0;
-  margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em;
-}
-legend {
-  color: inherit;
-  display: table;
-  max-width: 100%;
-  padding: 0;
-  white-space: normal;
-}
 /* End extract */
 html,
 body {
@@ -179,9 +108,7 @@ h6 {
   font-weight: 400;
   margin: 10px 0;
 }
-.w3-wide {
-  letter-spacing: 4px;
-}
+
 hr {
   border: 0;
   border-top: 1px solid #eee;
@@ -197,337 +124,38 @@ img {
 a {
   color: inherit;
 }
-.w3-table,
-.w3-table-all {
-  border-collapse: collapse;
-  border-spacing: 0;
-  width: 100%;
-  display: table;
-}
-.w3-table-all {
-  border: 1px solid #ccc;
-}
-.w3-bordered tr,
-.w3-table-all tr {
-  border-bottom: 1px solid #ddd;
-}
-.w3-striped tbody tr:nth-child(even) {
-  background-color: #f1f1f1;
-}
-.w3-table-all tr:nth-child(odd) {
-  background-color: #fff;
-}
-.w3-table-all tr:nth-child(even) {
-  background-color: #f1f1f1;
-}
-.w3-hoverable tbody tr:hover,
-.w3-ul.w3-hoverable li:hover {
-  background-color: #ccc;
-}
-.w3-centered tr th,
-.w3-centered tr td {
-  text-align: center;
-}
-.w3-table td,
-.w3-table th,
-.w3-table-all td,
-.w3-table-all th {
-  padding: 8px 8px;
-  display: table-cell;
-  text-align: left;
-  vertical-align: top;
-}
-.w3-table th:first-child,
-.w3-table td:first-child,
-.w3-table-all th:first-child,
-.w3-table-all td:first-child {
-  padding-left: 16px;
-}
-.w3-btn,
-.w3-button {
-  border: none;
-  display: inline-block;
-  padding: 8px 16px;
-  vertical-align: middle;
-  overflow: hidden;
-  text-decoration: none;
-  color: inherit;
-  background-color: inherit;
-  text-align: center;
-  cursor: pointer;
-  white-space: nowrap;
-}
-.w3-btn:hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-.w3-btn,
-.w3-button {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-.w3-disabled,
-.w3-btn:disabled,
-.w3-button:disabled {
-  cursor: not-allowed;
-  opacity: 0.3;
-}
-.w3-disabled *,
-:disabled * {
-  pointer-events: none;
-}
-.w3-btn.w3-disabled:hover,
-.w3-btn:disabled:hover {
-  box-shadow: none;
-}
-.w3-badge,
-.w3-tag {
-  background-color: #000;
-  color: #fff;
-  display: inline-block;
-  padding-left: 8px;
-  padding-right: 8px;
-  text-align: center;
-}
-.w3-badge {
-  border-radius: 50%;
-}
 .w3-ul {
   list-style-type: none;
   padding: 0;
   margin: 0;
 }
-.w3-ul li {
-  padding: 8px 16px;
-  border-bottom: 1px solid #ddd;
-}
-.w3-ul li:last-child {
-  border-bottom: none;
-}
-.w3-tooltip,
+
 .w3-display-container {
   position: relative;
 }
-.w3-tooltip .w3-text {
-  display: none;
-}
-.w3-tooltip:hover .w3-text {
-  display: inline-block;
-}
-.w3-ripple:active {
-  opacity: 0.5;
-}
-.w3-ripple {
-  transition: opacity 0s;
-}
-.w3-input {
-  padding: 8px;
-  display: block;
-  border: none;
-  border-bottom: 1px solid #ccc;
-  width: 100%;
-}
-.w3-select {
-  padding: 9px 0;
-  width: 100%;
-  border: none;
-  border-bottom: 1px solid #ccc;
-}
-.w3-dropdown-click,
-.w3-dropdown-hover {
-  position: relative;
-  display: inline-block;
-  cursor: pointer;
-}
-.w3-dropdown-hover:hover .w3-dropdown-content {
-  display: block;
-}
-.w3-dropdown-hover:first-child,
-.w3-dropdown-click:hover {
-  background-color: #ccc;
-  color: #000;
-}
-.w3-dropdown-hover:hover > .w3-button:first-child,
-.w3-dropdown-click:hover > .w3-button:first-child {
-  background-color: #ccc;
-  color: #000;
-}
-.w3-dropdown-content {
-  cursor: auto;
-  color: #000;
-  background-color: #fff;
-  display: none;
-  position: absolute;
-  min-width: 160px;
-  margin: 0;
-  padding: 0;
-  z-index: 1;
-}
-.w3-check,
-.w3-radio {
-  width: 24px;
-  height: 24px;
-  position: relative;
-  top: 6px;
-}
-.w3-sidebar {
-  height: 100%;
-  width: 200px;
-  background-color: #fff;
-  position: fixed !important;
-  z-index: 1;
-  overflow: auto;
-}
-.w3-bar-block .w3-dropdown-hover,
-.w3-bar-block .w3-dropdown-click {
-  width: 100%;
-}
-.w3-bar-block .w3-dropdown-hover .w3-dropdown-content,
-.w3-bar-block .w3-dropdown-click .w3-dropdown-content {
-  min-width: 100%;
-}
-.w3-bar-block .w3-dropdown-hover .w3-button,
-.w3-bar-block .w3-dropdown-click .w3-button {
-  width: 100%;
-  text-align: left;
-  padding: 8px 16px;
-}
-.w3-main,
-#main {
-  transition: margin-left 0.4s;
-}
-.w3-modal {
-  z-index: 3;
-  display: none;
-  padding-top: 100px;
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.4);
-}
-.w3-modal-content {
-  margin: auto;
-  background-color: #fff;
-  position: relative;
-  padding: 0;
-  outline: 0;
-  width: 600px;
-}
-.w3-bar {
-  width: 100%;
-  overflow: hidden;
-}
-.w3-center .w3-bar {
-  display: inline-block;
-  width: auto;
-}
-.w3-bar .w3-bar-item {
-  padding: 8px 16px;
-  float: left;
-  width: auto;
-  border: none;
-  display: block;
-  outline: 0;
-}
-.w3-bar .w3-dropdown-hover,
-.w3-bar .w3-dropdown-click {
-  position: static;
-  float: left;
-}
-.w3-bar .w3-button {
-  white-space: normal;
-}
-.w3-bar-block .w3-bar-item {
-  width: 100%;
-  display: block;
-  padding: 8px 16px;
-  text-align: left;
-  border: none;
-  white-space: normal;
-  float: none;
-  outline: 0;
-}
-.w3-bar-block.w3-center .w3-bar-item {
-  text-align: center;
-}
-.w3-block {
-  display: block;
-  width: 100%;
-}
+
+
 .w3-responsive {
   display: block;
   overflow-x: auto;
 }
-.w3-container:after,
-.w3-container:before,
-.w3-panel:after,
-.w3-panel:before,
-.w3-row:after,
-.w3-row:before,
+
+
+
+
 .w3-row-padding:after,
-.w3-row-padding:before,
-.w3-cell-row:before,
-.w3-cell-row:after,
-.w3-clear:after,
-.w3-clear:before,
-.w3-bar:before,
 .w3-bar:after {
   content: "";
   display: table;
   clear: both;
 }
-.w3-col,
-.w3-half,
+
 .w3-third,
-.w3-twothird,
-.w3-threequarter,
-.w3-quarter {
+.w3-twothird {
   float: left;
   width: 100%;
 }
-.w3-col.s1 {
-  width: 8.33333%;
-}
-.w3-col.s2 {
-  width: 16.66666%;
-}
-.w3-col.s3 {
-  width: 24.99999%;
-}
-.w3-col.s4 {
-  width: 33.33333%;
-}
-.w3-col.s5 {
-  width: 41.66666%;
-}
-.w3-col.s6 {
-  width: 49.99999%;
-}
-.w3-col.s7 {
-  width: 58.33333%;
-}
-.w3-col.s8 {
-  width: 66.66666%;
-}
-.w3-col.s9 {
-  width: 74.99999%;
-}
-.w3-col.s10 {
-  width: 83.33333%;
-}
-.w3-col.s11 {
-  width: 91.66666%;
-}
-.w3-col.s12 {
-  width: 99.99999%;
-}
+
 @media (min-width: 601px) {
   .w3-col.m1 {
     width: 8.33333%;
