--- a/css/main.css
+++ b/css/main.css
@@ -20,8 +20,7 @@ footer {
   display: list-item;
 }
 
-progress
- {
+progress {
   display: inline-block;
 }
 progress {
@@ -134,14 +133,10 @@ a {
   position: relative;
 }
 
-
 .w3-responsive {
   display: block;
   overflow-x: auto;
 }
-
-
-
 
 .w3-row-padding:after,
 .w3-bar:after {
@@ -733,469 +728,33 @@ a {
 .w3-margin-top {
   margin-top: 16px !important;
 }
-.w3-margin-bottom {
-  margin-bottom: 16px !important;
-}
-.w3-margin-left {
-  margin-left: 16px !important;
-}
-.w3-margin-right {
-  margin-right: 16px !important;
-}
-.w3-padding-small {
-  padding: 4px 8px !important;
-}
-.w3-padding {
-  padding: 8px 16px !important;
-}
-.w3-padding-large {
-  padding: 12px 24px !important;
-}
+
 .w3-padding-16 {
   padding-top: 16px !important;
   padding-bottom: 16px !important;
 }
-.w3-padding-24 {
-  padding-top: 24px !important;
-  padding-bottom: 24px !important;
-}
-.w3-padding-32 {
-  padding-top: 32px !important;
-  padding-bottom: 32px !important;
-}
-.w3-padding-48 {
-  padding-top: 48px !important;
-  padding-bottom: 48px !important;
-}
-.w3-padding-64 {
-  padding-top: 64px !important;
-  padding-bottom: 64px !important;
-}
-.w3-padding-top-64 {
-  padding-top: 64px !important;
-}
-.w3-padding-top-48 {
-  padding-top: 48px !important;
-}
-.w3-padding-top-32 {
-  padding-top: 32px !important;
-}
-.w3-padding-top-24 {
-  padding-top: 24px !important;
-}
-.w3-left {
-  float: left !important;
-}
-.w3-right {
-  float: right !important;
-}
-.w3-button:hover {
-  color: #000 !important;
-  background-color: #ccc !important;
-}
-.w3-transparent,
-.w3-hover-none:hover {
-  background-color: transparent !important;
-}
-.w3-hover-none:hover {
-  box-shadow: none !important;
-}
+
 /* Colors */
-.w3-amber,
-.w3-hover-amber:hover {
-  color: #000 !important;
-  background-color: #ffc107 !important;
-}
-.w3-aqua,
-.w3-hover-aqua:hover {
-  color: #000 !important;
-  background-color: #00ffff !important;
-}
-.w3-blue,
-.w3-hover-blue:hover {
-  color: #fff !important;
-  background-color: #2196f3 !important;
-}
-.w3-light-blue,
-.w3-hover-light-blue:hover {
-  color: #000 !important;
-  background-color: #87ceeb !important;
-}
-.w3-brown,
-.w3-hover-brown:hover {
-  color: #fff !important;
-  background-color: #795548 !important;
-}
-.w3-cyan,
-.w3-hover-cyan:hover {
-  color: #000 !important;
-  background-color: #00bcd4 !important;
-}
-.w3-blue-grey,
-.w3-hover-blue-grey:hover,
-.w3-blue-gray,
-.w3-hover-blue-gray:hover {
-  color: #fff !important;
-  background-color: #607d8b !important;
-}
-.w3-green,
-.w3-hover-green:hover {
-  color: #fff !important;
-  background-color: #4caf50 !important;
-}
-.w3-light-green,
-.w3-hover-light-green:hover {
-  color: #000 !important;
-  background-color: #8bc34a !important;
-}
-.w3-indigo,
-.w3-hover-indigo:hover {
-  color: #fff !important;
-  background-color: #3f51b5 !important;
-}
-.w3-khaki,
-.w3-hover-khaki:hover {
-  color: #000 !important;
-  background-color: #f0e68c !important;
-}
-.w3-lime,
-.w3-hover-lime:hover {
-  color: #000 !important;
-  background-color: #cddc39 !important;
-}
-.w3-orange,
-.w3-hover-orange:hover {
-  color: #000 !important;
-  background-color: #ff9800 !important;
-}
-.w3-deep-orange,
-.w3-hover-deep-orange:hover {
-  color: #fff !important;
-  background-color: #ff5722 !important;
-}
-.w3-pink,
-.w3-hover-pink:hover {
-  color: #fff !important;
-  background-color: #e91e63 !important;
-}
-.w3-purple,
-.w3-hover-purple:hover {
-  color: #fff !important;
-  background-color: #9c27b0 !important;
-}
-.w3-deep-purple,
-.w3-hover-deep-purple:hover {
-  color: #fff !important;
-  background-color: #673ab7 !important;
-}
-.w3-red,
-.w3-hover-red:hover {
-  color: #fff !important;
-  background-color: #f44336 !important;
-}
-.w3-sand,
-.w3-hover-sand:hover {
-  color: #000 !important;
-  background-color: #fdf5e6 !important;
-}
+
 .w3-teal,
 .w3-hover-teal:hover {
   color: #fff !important;
   background-color: #009688 !important;
 }
-.w3-yellow,
-.w3-hover-yellow:hover {
-  color: #000 !important;
-  background-color: #ffeb3b !important;
-}
-.w3-white,
-.w3-hover-white:hover {
-  color: #000 !important;
-  background-color: #fff !important;
-}
-.w3-black,
-.w3-hover-black:hover {
-  color: #fff !important;
-  background-color: #000 !important;
-}
-.w3-grey,
-.w3-hover-grey:hover,
-.w3-gray,
-.w3-hover-gray:hover {
-  color: #000 !important;
-  background-color: #9e9e9e !important;
-}
-.w3-light-grey,
-.w3-hover-light-grey:hover,
-.w3-light-gray,
-.w3-hover-light-gray:hover {
-  color: #000 !important;
-  background-color: #f1f1f1 !important;
-}
-.w3-dark-grey,
-.w3-hover-dark-grey:hover,
-.w3-dark-gray,
-.w3-hover-dark-gray:hover {
-  color: #fff !important;
-  background-color: #616161 !important;
-}
-.w3-pale-red,
-.w3-hover-pale-red:hover {
-  color: #000 !important;
-  background-color: #ffdddd !important;
-}
-.w3-pale-green,
-.w3-hover-pale-green:hover {
-  color: #000 !important;
-  background-color: #ddffdd !important;
-}
-.w3-pale-yellow,
-.w3-hover-pale-yellow:hover {
-  color: #000 !important;
-  background-color: #ffffcc !important;
-}
-.w3-pale-blue,
-.w3-hover-pale-blue:hover {
-  color: #000 !important;
-  background-color: #ddffff !important;
-}
-.w3-text-amber,
-.w3-hover-text-amber:hover {
-  color: #ffc107 !important;
-}
-.w3-text-aqua,
-.w3-hover-text-aqua:hover {
-  color: #00ffff !important;
-}
-.w3-text-blue,
-.w3-hover-text-blue:hover {
-  color: #2196f3 !important;
-}
-.w3-text-light-blue,
-.w3-hover-text-light-blue:hover {
-  color: #87ceeb !important;
-}
-.w3-text-brown,
-.w3-hover-text-brown:hover {
-  color: #795548 !important;
-}
-.w3-text-cyan,
-.w3-hover-text-cyan:hover {
-  color: #00bcd4 !important;
-}
-.w3-text-blue-grey,
-.w3-hover-text-blue-grey:hover,
-.w3-text-blue-gray,
-.w3-hover-text-blue-gray:hover {
-  color: #607d8b !important;
-}
-.w3-text-green,
-.w3-hover-text-green:hover {
-  color: #4caf50 !important;
-}
-.w3-text-light-green,
-.w3-hover-text-light-green:hover {
-  color: #8bc34a !important;
-}
-.w3-text-indigo,
-.w3-hover-text-indigo:hover {
-  color: #3f51b5 !important;
-}
-.w3-text-khaki,
-.w3-hover-text-khaki:hover {
-  color: #b4aa50 !important;
-}
-.w3-text-lime,
-.w3-hover-text-lime:hover {
-  color: #cddc39 !important;
-}
-.w3-text-orange,
-.w3-hover-text-orange:hover {
-  color: #ff9800 !important;
-}
-.w3-text-deep-orange,
-.w3-hover-text-deep-orange:hover {
-  color: #ff5722 !important;
-}
-.w3-text-pink,
-.w3-hover-text-pink:hover {
-  color: #e91e63 !important;
-}
-.w3-text-purple,
-.w3-hover-text-purple:hover {
-  color: #9c27b0 !important;
-}
-.w3-text-deep-purple,
-.w3-hover-text-deep-purple:hover {
-  color: #673ab7 !important;
-}
-.w3-text-red,
-.w3-hover-text-red:hover {
-  color: #f44336 !important;
-}
-.w3-text-sand,
-.w3-hover-text-sand:hover {
-  color: #fdf5e6 !important;
-}
+
 .w3-text-teal,
 .w3-hover-text-teal:hover {
   color: #009688 !important;
 }
-.w3-text-yellow,
-.w3-hover-text-yellow:hover {
-  color: #d2be0e !important;
-}
+
 .w3-text-white,
 .w3-hover-text-white:hover {
   color: #fff !important;
 }
-.w3-text-black,
-.w3-hover-text-black:hover {
-  color: #000 !important;
-}
+
 .w3-text-grey,
 .w3-hover-text-grey:hover,
 .w3-text-gray,
 .w3-hover-text-gray:hover {
   color: #757575 !important;
-}
-.w3-text-light-grey,
-.w3-hover-text-light-grey:hover,
-.w3-text-light-gray,
-.w3-hover-text-light-gray:hover {
-  color: #f1f1f1 !important;
-}
-.w3-text-dark-grey,
-.w3-hover-text-dark-grey:hover,
-.w3-text-dark-gray,
-.w3-hover-text-dark-gray:hover {
-  color: #3a3a3a !important;
-}
-.w3-border-amber,
-.w3-hover-border-amber:hover {
-  border-color: #ffc107 !important;
-}
-.w3-border-aqua,
-.w3-hover-border-aqua:hover {
-  border-color: #00ffff !important;
-}
-.w3-border-blue,
-.w3-hover-border-blue:hover {
-  border-color: #2196f3 !important;
-}
-.w3-border-light-blue,
-.w3-hover-border-light-blue:hover {
-  border-color: #87ceeb !important;
-}
-.w3-border-brown,
-.w3-hover-border-brown:hover {
-  border-color: #795548 !important;
-}
-.w3-border-cyan,
-.w3-hover-border-cyan:hover {
-  border-color: #00bcd4 !important;
-}
-.w3-border-blue-grey,
-.w3-hover-border-blue-grey:hover,
-.w3-border-blue-gray,
-.w3-hover-border-blue-gray:hover {
-  border-color: #607d8b !important;
-}
-.w3-border-green,
-.w3-hover-border-green:hover {
-  border-color: #4caf50 !important;
-}
-.w3-border-light-green,
-.w3-hover-border-light-green:hover {
-  border-color: #8bc34a !important;
-}
-.w3-border-indigo,
-.w3-hover-border-indigo:hover {
-  border-color: #3f51b5 !important;
-}
-.w3-border-khaki,
-.w3-hover-border-khaki:hover {
-  border-color: #f0e68c !important;
-}
-.w3-border-lime,
-.w3-hover-border-lime:hover {
-  border-color: #cddc39 !important;
-}
-.w3-border-orange,
-.w3-hover-border-orange:hover {
-  border-color: #ff9800 !important;
-}
-.w3-border-deep-orange,
-.w3-hover-border-deep-orange:hover {
-  border-color: #ff5722 !important;
-}
-.w3-border-pink,
-.w3-hover-border-pink:hover {
-  border-color: #e91e63 !important;
-}
-.w3-border-purple,
-.w3-hover-border-purple:hover {
-  border-color: #9c27b0 !important;
-}
-.w3-border-deep-purple,
-.w3-hover-border-deep-purple:hover {
-  border-color: #673ab7 !important;
-}
-.w3-border-red,
-.w3-hover-border-red:hover {
-  border-color: #f44336 !important;
-}
-.w3-border-sand,
-.w3-hover-border-sand:hover {
-  border-color: #fdf5e6 !important;
-}
-.w3-border-teal,
-.w3-hover-border-teal:hover {
-  border-color: #009688 !important;
-}
-.w3-border-yellow,
-.w3-hover-border-yellow:hover {
-  border-color: #ffeb3b !important;
-}
-.w3-border-white,
-.w3-hover-border-white:hover {
-  border-color: #fff !important;
-}
-.w3-border-black,
-.w3-hover-border-black:hover {
-  border-color: #000 !important;
-}
-.w3-border-grey,
-.w3-hover-border-grey:hover,
-.w3-border-gray,
-.w3-hover-border-gray:hover {
-  border-color: #9e9e9e !important;
-}
-.w3-border-light-grey,
-.w3-hover-border-light-grey:hover,
-.w3-border-light-gray,
-.w3-hover-border-light-gray:hover {
-  border-color: #f1f1f1 !important;
-}
-.w3-border-dark-grey,
-.w3-hover-border-dark-grey:hover,
-.w3-border-dark-gray,
-.w3-hover-border-dark-gray:hover {
-  border-color: #616161 !important;
-}
-.w3-border-pale-red,
-.w3-hover-border-pale-red:hover {
-  border-color: #ffe7e7 !important;
-}
-.w3-border-pale-green,
-.w3-hover-border-pale-green:hover {
-  border-color: #e7ffe7 !important;
-}
-.w3-border-pale-yellow,
-.w3-hover-border-pale-yellow:hover {
-  border-color: #ffffcc !important;
-}
-.w3-border-pale-blue,
-.w3-hover-border-pale-blue:hover {
-  border-color: #e7ffff !important;
 }
