--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,7 @@
-/* W3.CSS 4.15 December 2020 by Jan Egil and Borge Refsnes */
+/* global */
+*:root {
+  --clr-primary: #051b49;
+}
 html {
   box-sizing: border-box;
 }
@@ -7,36 +10,14 @@ html {
 *:after {
   box-sizing: inherit;
 }
-/* Extract from normalize.css by Nicolas Gallagher and Jonathan Neal git.io/normalize */
+
+/*  */
 html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
 body {
   margin: 0;
-}
-
-footer {
-  display: list-item;
-}
-
-progress {
-  display: inline-block;
-}
-progress {
-  vertical-align: baseline;
-}
-a {
-  background-color: transparent;
-}
-a:active,
-a:hover {
-  outline-width: 0;
-}
-
-b,
-strong {
-  font-weight: bolder;
 }
 
 img {
@@ -47,14 +28,6 @@ hr {
   box-sizing: content-box;
   height: 0;
   overflow: visible;
-}
-button,
-input,
-select,
-textarea,
-optgroup {
-  font: inherit;
-  margin: 0;
 }
 
 /* End extract */
@@ -69,40 +42,36 @@ html {
 }
 h1 {
   font-size: 36px;
+  font-family: "Segoe UI", Arial, sans-serif;
+  font-weight: 400;
+  margin: 10px 0;
 }
 h2 {
   font-size: 30px;
+  font-family: "Segoe UI", Arial, sans-serif;
+  font-weight: 400;
+  margin: 10px 0;
 }
 h3 {
   font-size: 24px;
+  font-family: "Segoe UI", Arial, sans-serif;
+  font-weight: 400;
+  margin: 10px 0;
 }
 h4 {
   font-size: 20px;
+  font-family: "Segoe UI", Arial, sans-serif;
+  font-weight: 400;
+  margin: 10px 0;
 }
 h5 {
   font-size: 18px;
+  font-family: "Segoe UI", Arial, sans-serif;
+  font-weight: 400;
+  margin: 10px 0;
 }
 h6 {
   font-size: 16px;
-}
-.w3-serif {
-  font-family: serif;
-}
-.w3-sans-serif {
-  font-family: sans-serif;
-}
-.w3-cursive {
-  font-family: cursive;
-}
-.w3-monospace {
-  font-family: monospace;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
   font-family: "Segoe UI", Arial, sans-serif;
   font-weight: 400;
   margin: 10px 0;
@@ -112,30 +81,6 @@ hr {
   border: 0;
   border-top: 1px solid #eee;
   margin: 20px 0;
-}
-.w3-image {
-  max-width: 100%;
-  height: auto;
-}
-img {
-  vertical-align: middle;
-}
-a {
-  color: inherit;
-}
-.w3-ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-
-.w3-display-container {
-  position: relative;
-}
-
-.w3-responsive {
-  display: block;
-  overflow-x: auto;
 }
 
 .w3-row-padding:after,
@@ -155,127 +100,25 @@ a {
   .w3-col.m1 {
     width: 8.33333%;
   }
-  .w3-col.m2 {
-    width: 16.66666%;
-  }
-  .w3-col.m3,
-  .w3-quarter {
-    width: 24.99999%;
-  }
+
   .w3-col.m4,
   .w3-third {
     width: 33.33333%;
   }
-  .w3-col.m5 {
-    width: 41.66666%;
-  }
+
   .w3-col.m6,
   .w3-half {
     width: 49.99999%;
   }
-  .w3-col.m7 {
-    width: 58.33333%;
-  }
+
   .w3-col.m8,
   .w3-twothird {
     width: 66.66666%;
   }
-  .w3-col.m9,
-  .w3-threequarter {
-    width: 74.99999%;
-  }
-  .w3-col.m10 {
-    width: 83.33333%;
-  }
-  .w3-col.m11 {
-    width: 91.66666%;
-  }
-  .w3-col.m12 {
-    width: 99.99999%;
-  }
+
+  /*  */
 }
-@media (min-width: 993px) {
-  .w3-col.l1 {
-    width: 8.33333%;
-  }
-  .w3-col.l2 {
-    width: 16.66666%;
-  }
-  .w3-col.l3 {
-    width: 24.99999%;
-  }
-  .w3-col.l4 {
-    width: 33.33333%;
-  }
-  .w3-col.l5 {
-    width: 41.66666%;
-  }
-  .w3-col.l6 {
-    width: 49.99999%;
-  }
-  .w3-col.l7 {
-    width: 58.33333%;
-  }
-  .w3-col.l8 {
-    width: 66.66666%;
-  }
-  .w3-col.l9 {
-    width: 74.99999%;
-  }
-  .w3-col.l10 {
-    width: 83.33333%;
-  }
-  .w3-col.l11 {
-    width: 91.66666%;
-  }
-  .w3-col.l12 {
-    width: 99.99999%;
-  }
-}
-.w3-rest {
-  overflow: hidden;
-}
-.w3-stretch {
-  margin-left: -16px;
-  margin-right: -16px;
-}
-.w3-content,
-.w3-auto {
-  margin-left: auto;
-  margin-right: auto;
-}
-.w3-content {
-  max-width: 980px;
-}
-.w3-auto {
-  max-width: 1140px;
-}
-.w3-cell-row {
-  display: table;
-  width: 100%;
-}
-.w3-cell {
-  display: table-cell;
-}
-.w3-cell-top {
-  vertical-align: top;
-}
-.w3-cell-middle {
-  vertical-align: middle;
-}
-.w3-cell-bottom {
-  vertical-align: bottom;
-}
-.w3-hide {
-  display: none !important;
-}
-.w3-show-block,
-.w3-show {
-  display: block !important;
-}
-.w3-show-inline-block {
-  display: inline-block !important;
-}
+
 @media (max-width: 1205px) {
   .w3-auto {
     max-width: 95%;
@@ -350,116 +193,11 @@ a {
     max-width: 100%;
   }
 }
-.w3-top,
-.w3-bottom {
-  position: fixed;
-  width: 100%;
-  z-index: 1;
-}
-.w3-top {
-  top: 0;
-}
-.w3-bottom {
-  bottom: 0;
-}
-.w3-overlay {
-  position: fixed;
-  display: none;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 2;
-}
-.w3-display-topleft {
-  position: absolute;
-  left: 0;
-  top: 0;
-}
-.w3-display-topright {
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-.w3-display-bottomleft {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-}
-.w3-display-bottomright {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-}
-.w3-display-middle {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-}
-.w3-display-left {
-  position: absolute;
-  top: 50%;
-  left: 0%;
-  transform: translate(0%, -50%);
-  -ms-transform: translate(-0%, -50%);
-}
-.w3-display-right {
-  position: absolute;
-  top: 50%;
-  right: 0%;
-  transform: translate(0%, -50%);
-  -ms-transform: translate(0%, -50%);
-}
-.w3-display-topmiddle {
-  position: absolute;
-  left: 50%;
-  top: 0;
-  transform: translate(-50%, 0%);
-  -ms-transform: translate(-50%, 0%);
-}
-.w3-display-bottommiddle {
-  position: absolute;
-  left: 50%;
-  bottom: 0;
-  transform: translate(-50%, 0%);
-  -ms-transform: translate(-50%, 0%);
-}
-.w3-display-container:hover .w3-display-hover {
-  display: block;
-}
-.w3-display-container:hover span.w3-display-hover {
-  display: inline-block;
-}
-.w3-display-hover {
-  display: none;
-}
-.w3-display-position {
-  position: absolute;
-}
-.w3-circle {
-  border-radius: 50%;
-}
-.w3-round-small {
-  border-radius: 2px;
-}
-.w3-round,
-.w3-round-medium {
-  border-radius: 4px;
-}
-.w3-round-large {
-  border-radius: 8px;
-}
+
 .w3-round-xlarge {
   border-radius: 16px;
 }
-.w3-round-xxlarge {
-  border-radius: 32px;
-}
+
 .w3-row-padding,
 .w3-row-padding > .w3-half,
 .w3-row-padding > .w3-third,
@@ -473,29 +211,7 @@ a {
 .w3-panel {
   padding: 0.01em 16px;
 }
-.w3-panel {
-  margin-top: 16px;
-  margin-bottom: 16px;
-}
-.w3-code,
-.w3-codespan {
-  font-family: Consolas, "courier new";
-  font-size: 16px;
-}
-.w3-code {
-  width: auto;
-  background-color: #fff;
-  padding: 8px 12px;
-  border-left: 4px solid #4caf50;
-  word-wrap: break-word;
-}
-.w3-codespan {
-  color: crimson;
-  background-color: #f1f1f1;
-  padding-left: 4px;
-  padding-right: 4px;
-  font-size: 110%;
-}
+
 .w3-card,
 .w3-card-2 {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
@@ -504,227 +220,20 @@ a {
 .w3-hover-shadow:hover {
   box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
 }
-.w3-spin {
-  animation: w3-spin 2s infinite linear;
-}
-@keyframes w3-spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(359deg);
-  }
-}
-.w3-animate-fading {
-  animation: fading 10s infinite;
-}
-@keyframes fading {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-.w3-animate-opacity {
-  animation: opac 0.8s;
-}
-@keyframes opac {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-.w3-animate-top {
-  position: relative;
-  animation: animatetop 0.4s;
-}
-@keyframes animatetop {
-  from {
-    top: -300px;
-    opacity: 0;
-  }
-  to {
-    top: 0;
-    opacity: 1;
-  }
-}
-.w3-animate-left {
-  position: relative;
-  animation: animateleft 0.4s;
-}
-@keyframes animateleft {
-  from {
-    left: -300px;
-    opacity: 0;
-  }
-  to {
-    left: 0;
-    opacity: 1;
-  }
-}
-.w3-animate-right {
-  position: relative;
-  animation: animateright 0.4s;
-}
-@keyframes animateright {
-  from {
-    right: -300px;
-    opacity: 0;
-  }
-  to {
-    right: 0;
-    opacity: 1;
-  }
-}
-.w3-animate-bottom {
-  position: relative;
-  animation: animatebottom 0.4s;
-}
-@keyframes animatebottom {
-  from {
-    bottom: -300px;
-    opacity: 0;
-  }
-  to {
-    bottom: 0;
-    opacity: 1;
-  }
-}
-.w3-animate-zoom {
-  animation: animatezoom 0.6s;
-}
-@keyframes animatezoom {
-  from {
-    transform: scale(0);
-  }
-  to {
-    transform: scale(1);
-  }
-}
-.w3-animate-input {
-  transition: width 0.4s ease-in-out;
-}
-.w3-animate-input:focus {
-  width: 100% !important;
-}
+
 .w3-opacity,
 .w3-hover-opacity:hover {
   opacity: 0.6;
 }
-.w3-opacity-off,
-.w3-hover-opacity-off:hover {
-  opacity: 1;
-}
-.w3-opacity-max {
-  opacity: 0.25;
-}
-.w3-opacity-min {
-  opacity: 0.75;
-}
-.w3-greyscale-max,
-.w3-grayscale-max,
-.w3-hover-greyscale:hover,
-.w3-hover-grayscale:hover {
-  filter: grayscale(100%);
-}
-.w3-greyscale,
-.w3-grayscale {
-  filter: grayscale(75%);
-}
-.w3-greyscale-min,
-.w3-grayscale-min {
-  filter: grayscale(50%);
-}
-.w3-sepia {
-  filter: sepia(75%);
-}
-.w3-sepia-max,
-.w3-hover-sepia:hover {
-  filter: sepia(100%);
-}
-.w3-sepia-min {
-  filter: sepia(50%);
-}
-.w3-tiny {
-  font-size: 10px !important;
-}
-.w3-small {
-  font-size: 12px !important;
-}
-.w3-medium {
-  font-size: 15px !important;
-}
+
 .w3-large {
   font-size: 18px !important;
 }
-.w3-xlarge {
-  font-size: 24px !important;
-}
-.w3-xxlarge {
-  font-size: 36px !important;
-}
-.w3-xxxlarge {
-  font-size: 48px !important;
-}
-.w3-jumbo {
-  font-size: 64px !important;
-}
-.w3-left-align {
-  text-align: left !important;
-}
-.w3-right-align {
-  text-align: right !important;
-}
-.w3-justify {
-  text-align: justify !important;
-}
+
 .w3-center {
   text-align: center !important;
 }
-.w3-border-0 {
-  border: 0 !important;
-}
-.w3-border {
-  border: 1px solid #ccc !important;
-}
-.w3-border-top {
-  border-top: 1px solid #ccc !important;
-}
-.w3-border-bottom {
-  border-bottom: 1px solid #ccc !important;
-}
-.w3-border-left {
-  border-left: 1px solid #ccc !important;
-}
-.w3-border-right {
-  border-right: 1px solid #ccc !important;
-}
-.w3-topbar {
-  border-top: 6px solid #ccc !important;
-}
-.w3-bottombar {
-  border-bottom: 6px solid #ccc !important;
-}
-.w3-leftbar {
-  border-left: 6px solid #ccc !important;
-}
-.w3-rightbar {
-  border-right: 6px solid #ccc !important;
-}
-.w3-section,
-.w3-code {
-  margin-top: 16px !important;
-  margin-bottom: 16px !important;
-}
-.w3-margin {
-  margin: 16px !important;
-}
+
 .w3-margin-top {
   margin-top: 16px !important;
 }
@@ -739,12 +248,14 @@ a {
 .w3-teal,
 .w3-hover-teal:hover {
   color: #fff !important;
-  background-color: #009688 !important;
+  background-color: var(--clr-primary) !important;
+  padding: 0.1rem 1rem;
+  border-radius: 0.275rem;
 }
 
 .w3-text-teal,
 .w3-hover-text-teal:hover {
-  color: #009688 !important;
+  color: var(--clr-primary) !important;
 }
 
 .w3-text-white,
@@ -756,5 +267,5 @@ a {
 .w3-hover-text-grey:hover,
 .w3-text-gray,
 .w3-hover-text-gray:hover {
-  color: #757575 !important;
+  color: #160707 !important;
 }
